 - Added Room.BackgroundAnimationEnabled property to let have disabled animation on room load.
 - Editor will now create an empty sprite file if one is missing in the game project. Any existing
   sprite descriptions in the project will be kept, letting user to reimport these from sources.
 - Added "File -> Restore all sprites from sources" menu command.
 - Upgraded script editor to Scintilla 3.21.1 and ScintillaNET 3.6.3.
 - Added "Apply" button on editor's Preferences dialog.
 - Select script editor's font in the editor's Preferences.
 - Cursor's position in script is now displayed on the status bar.
 - Added zoom controls for the Sprite Manager. Cursor, Inventory Item and View panes.
 - Sprites may now be imported by drag'n'drop into the Sprite manager.
 - In sprite manager's "export all" dialog added "skip if local" option.
 - In sprite manager's context menu added command "Create source files for all sprites with missing
    / external sources..."
 - On the View pane the frames having set delay and linked sound will be now indicated with icons.
 - Editor no longer errors on empty translations when compiling the game.
 - Editor now exports values of the string type Custom Properties to translations.
 - Editor no longer prevents exporting string arguments from Get/SetTextProperty calls to TRS file.
 - Editor now cleanups spritefile on game load, identifying any data not referenced by the project
   and marking it for deletion.
 - Fixed editor displaying unhandled exception if the room script which user is trying to open was
   missing. Instead it will now open a blank script.
 - Fixed room editor was suggesting to save the modified room even if no changes were made.
 - Fixed going to a "find all" result in dialog script did not highlight the found text,
   and sometimes did not scroll down to it.
 - Fixed few editor panes were not opening correct help topics in F1.

Compiler:
 - Support unicode character literals.