@@ -1,6 +1,6 @@
 {
-    "version": "3.6.0.27",
+    "version": "3.6.0.28",
     "versionFriendly": "3.6.0",
-    "versionSp": "Beta7",
+    "versionSp": "Beta8",
     "appID": "a4d6de0f-18b0-4aae-9338-86a333563b98"
 }
